// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncContacts should render 1`] = `
<Connect(BaseDataSourcePage)
  breadcrumbItems={
    Array [
      Object {
        "href": "/workspace/23/settings/data-source",
        "label": "Data Sources",
      },
      Object {
        "active": false,
        "href": "/workspace/23/settings/data-source/23",
        "label": "Liferay23",
        "truncate": true,
      },
      Object {
        "active": true,
        "label": "Sync Contacts",
      },
    ]
  }
  className="sync-contacts-root"
  dataSource={
    Immutable.Record {
      "contactsSelected": false,
      "credentials": Immutable.Map {
        "login": "LiferayUser23",
      },
      "dateCreated": 1531090866366,
      "disabled": false,
      "event": null,
      "fileName": null,
      "id": "23",
      "lastSyncDate": 1531263666366,
      "name": "Liferay23",
      "properties": Immutable.Map {},
      "provider": Immutable.Map {
        "contactsConfiguration": Immutable.Map {
          "enableAllContacts": false,
          "organizations": Immutable.List [],
          "userGroups": Immutable.List [],
        },
      },
      "providerType": "LIFERAY",
      "sitesSelected": false,
      "state": "CREDENTIALS_VALID",
      "status": "ACTIVE",
      "type": 1,
      "url": "https://www.faro-23.io",
    }
  }
  documentTitle="Liferay23"
  groupId="23"
  key="SyncContacts"
  pageTitle="Configuration Options"
  showDelete={false}
>
  <Sheet
    large={false}
    pageDisplay={false}
  >
    <Header
      border={true}
      divider={true}
    >
      <ProgressTimeline
        activeIndex={0}
        items={
          Array [
            Object {
              "title": "Contacts",
            },
            Object {
              "title": "Contact Data",
            },
          ]
        }
      />
    </Header>
    <Body>
      <Section
        lastChildMargin={false}
      >
        <div
          className="section-title"
        >
          <span
            className="sync-contacts-title"
          >
            Sync All Contacts
          </span>
          <Label
            display="info"
            size="lg"
            uppercase={true}
          >
            Recommended
          </Label>
        </div>
        <span
          className="secondary-text"
        >
          Syncing all your contacts from Liferay Portal is the best way to get started in Analytics Cloud.
        </span>
        <ListGroup
          noBorder={true}
          showQuickActionsOnHover={true}
        >
          <Item
            action={false}
            active={false}
            disabled={false}
            flex={true}
            header={false}
          >
            <ItemField
              expand={false}
            >
              <ToggleSwitch
                checked={false}
                name="syncAll"
                onChange={[Function]}
              />
            </ItemField>
            <ItemField
              expand={false}
            >
              <ItemTitle>
                <label
                  htmlFor="syncAll"
                >
                  Sync All 
                  (0 Contacts)
                </label>
              </ItemTitle>
            </ItemField>
          </Item>
        </ListGroup>
      </Section>
      <Section
        lastChildMargin={false}
      >
        <h4>
          Sync by User Groups and Organizations
        </h4>
        <span
          className="secondary-text"
        >
          You can also choose to sync by specific user groups and organizations. Contacts belonging to multiple User Groups and Organizations are only counted once.
        </span>
        <Spinner
          alignCenter={false}
          display="dotted"
          fadeIn={false}
          inline={false}
          light={false}
          overlay={false}
          spacer={true}
        />
        <div
          className="total-sync-info"
        >
          <div
            className="total-unique"
          >
            Total Unique Contacts to Sync: 0
          </div>
          <div>
            By saving this configuration, you will be syncing 0 more contacts.
          </div>
        </div>
      </Section>
    </Body>
    <Footer
      divider={true}
    >
      <FormNavigation
        cancelHref="/workspace/23/settings/data-source/23/liferay/configuration-status"
        enableNext={false}
        onNextStep={[Function]}
        submitMessage="Save and Continue"
        submitting={false}
      />
    </Footer>
  </Sheet>
</Connect(BaseDataSourcePage)>
`;

exports[`SyncContacts should render with "Syncing x fewer contacts" verbiage if totalUsersCount is less than currentUsersCount 1`] = `
<div
  className="total-sync-info"
>
  <div
    className="total-unique"
  >
    Total Unique Contacts to Sync: 0
  </div>
  <div>
    By saving this configuration, you will be syncing 1,015 fewer contacts.
  </div>
</div>
`;

exports[`SyncContacts should render with Sync All contacts count even if contactsConfiguration has no configuration 1`] = `
<Connect(BaseDataSourcePage)
  breadcrumbItems={
    Array [
      Object {
        "href": "/workspace/23/settings/data-source",
        "label": "Data Sources",
      },
      Object {
        "active": false,
        "href": "/workspace/23/settings/data-source/23",
        "label": "Liferay23",
        "truncate": true,
      },
      Object {
        "active": true,
        "label": "Sync Contacts",
      },
    ]
  }
  className="sync-contacts-root"
  dataSource={
    Immutable.Record {
      "contactsSelected": false,
      "credentials": Immutable.Map {
        "login": "LiferayUser23",
      },
      "dateCreated": 1531090866366,
      "disabled": false,
      "event": null,
      "fileName": null,
      "id": "23",
      "lastSyncDate": 1531263666366,
      "name": "Liferay23",
      "properties": Immutable.Map {},
      "provider": Immutable.Map {
        "contactsConfiguration": Immutable.Map {
          "enableAllContacts": false,
          "organizations": Immutable.List [],
          "userGroups": Immutable.List [],
        },
      },
      "providerType": "LIFERAY",
      "sitesSelected": false,
      "state": "CREDENTIALS_VALID",
      "status": "ACTIVE",
      "type": 1,
      "url": "https://www.faro-23.io",
    }
  }
  documentTitle="Liferay23"
  groupId="23"
  key="SyncContacts"
  pageTitle="Configuration Options"
  showDelete={false}
>
  <Sheet
    large={false}
    pageDisplay={false}
  >
    <Header
      border={true}
      divider={true}
    >
      <ProgressTimeline
        activeIndex={0}
        items={
          Array [
            Object {
              "title": "Contacts",
            },
            Object {
              "title": "Contact Data",
            },
          ]
        }
      />
    </Header>
    <Body>
      <Section
        lastChildMargin={false}
      >
        <div
          className="section-title"
        >
          <span
            className="sync-contacts-title"
          >
            Sync All Contacts
          </span>
          <Label
            display="info"
            size="lg"
            uppercase={true}
          >
            Recommended
          </Label>
        </div>
        <span
          className="secondary-text"
        >
          Syncing all your contacts from Liferay Portal is the best way to get started in Analytics Cloud.
        </span>
        <ListGroup
          noBorder={true}
          showQuickActionsOnHover={true}
        >
          <Item
            action={false}
            active={false}
            disabled={false}
            flex={true}
            header={false}
          >
            <ItemField
              expand={false}
            >
              <ToggleSwitch
                checked={false}
                name="syncAll"
                onChange={[Function]}
              />
            </ItemField>
            <ItemField
              expand={false}
            >
              <ItemTitle>
                <label
                  htmlFor="syncAll"
                >
                  Sync All 
                  (1,000 Contacts)
                </label>
              </ItemTitle>
            </ItemField>
          </Item>
        </ListGroup>
      </Section>
      <Section
        lastChildMargin={false}
      >
        <h4>
          Sync by User Groups and Organizations
        </h4>
        <span
          className="secondary-text"
        >
          You can also choose to sync by specific user groups and organizations. Contacts belonging to multiple User Groups and Organizations are only counted once.
        </span>
        <ListGroup
          noBorder={true}
          showQuickActionsOnHover={true}
        >
          <SyncItem
            contactsCount={260}
            groupLabel="User Groups"
            groupsCount={0}
            iconSymbol="user"
            key="0"
            onItemClick={[Function]}
            syncAll={false}
          />
          <SyncItem
            contactsCount={140}
            groupLabel="Organizations"
            groupsCount={0}
            iconSymbol="organizations"
            key="1"
            onItemClick={[Function]}
            syncAll={false}
          />
        </ListGroup>
        <div
          className="total-sync-info"
        >
          <div
            className="total-unique"
          >
            Total Unique Contacts to Sync: 448
          </div>
          <div>
            By saving this configuration, you will be syncing 200 more contacts.
          </div>
        </div>
      </Section>
    </Body>
    <Footer
      divider={true}
    >
      <FormNavigation
        cancelHref="/workspace/23/settings/data-source/23/liferay/configuration-status"
        enableNext={false}
        onNextStep={[Function]}
        submitMessage="Save and Continue"
        submitting={false}
      />
    </Footer>
  </Sheet>
</Connect(BaseDataSourcePage)>
`;
